# greenpak

./: .gitignore  README.md  TODO.txt  build.sh  diff_pip.sh  push_pypi.sh  push_testpypi.sh  pyproject.toml
docs/: .gitignore  build.sh  conf.py  index.rst  requirements.txt
samples/: README.md  slg46826_blinky_fast.txt  slg46826_blinky_slow.txt
src/: .gitignore
src/greenpak/: .gitignore  __init__.py  devices.py  driver.py  drivers.py  i2c.py  utils.py
src/greenpak/data/: SLG46826_default.hex
src/greenpak/data_files/: README.md  SLG46824_default.hex  SLG46827_default.hex  SLG47004_default.hex
src/greenpak/reg/: README.md  slg46826.py  slg46826_parser.py
src/greenpak/reg/c/: slg46826_reg.h  slg46826_register_t.h  test.c
test/: .gitignore  _output_file.hex  bp_eeprom_test.py  bp_test.py  example1.py  example2.py  example3.py  example4.py  read_test.py  requirements.txt  smb_test.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py
test/test_data/: README.txt
